...
        _completed = State(wrappedValue: task.completed)
    }

    var body: some View {
        Form {
            Section(header: Text("Basic settings")) {
                TextField("Task name", text: $title.onChange(update))
                ZStack {
                    TextEditor(text: $detail.onChange(update))
                        .frame(minHeight: 60, alignment: .topLeading)
                        .multilineTextAlignment(.leading)

                    Text("Enter the description of the task")
...
